--- a/server/views/page_market.ejs
+++ b/server/views/page_market.ejs
@@ -1,6 +1,39 @@
-<div id="plot"></div>
+<div class="ui-corner-all">
+  <div class="ui-bar ui-bar-a">
+    <h3>Top traderi</h3>
+  </div>
+  <div class="ui-body ui-body-a">
+    <table
+      data-role="table"
+      class="table-stroke ui-responsive"
+      data-mode="columntoggle"
+      id="details">
+      <thead>
+        <tr>
+          <th>Trader</th>
+          <th>Vrijednost</th>
+        </tr>
+      </thead>
+      <% for (var i = 0; i < top_traders.length; ++i) { %>
+        <tr>
+          <td><%= top_traders[i].user_name %>%></td>
+          <td><%= formatValue(top_traders[i].total_money) %></td>
+        </tr>
+      <% } %>
+      <tbody>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-hello world!
-
-<%= session %>
+<div class="ui-corner-all">
+  <div class="ui-bar ui-bar-a">
+    <h3>Stanje dionica</h3>
+  </div>
+  <div class="ui-body ui-body-a">
+    <div class="plot-container">
+      <div id="plot" class="plot"></div>
+    </div>
+  </div>
+</div>
 
