pipeline updates total_money

--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -21,7 +21,7 @@
 <div data-role="footer" data-position="fixed" data-theme="a">
   <div data-role="navbar">
     <ul>
-      <li><a href="#market" class="market">Market</a></li>
+      <li><a href="#market" class="market">Tržište</a></li>
       <li><a href="#personal" class="personal">Kupi/prodaj</a></li>
     </ul>
   </div>
