--- a/server/views/page_personal.ejs
+++ b/server/views/page_personal.ejs
@@ -15,6 +15,9 @@
 <% } %>
 
 <div class="ui-corner-all">
+  <div class="ui-bar ui-bar-a">
+    <h3>Moje stanje</h3>
+  </div>
   <div class="ui-body ui-body-a">
     <table
       data-role="table"
