--- a/server/views/page_market.ejs
+++ b/server/views/page_market.ejs
@@ -1,5 +1,23 @@
 <div class="ui-corner-all">
   <div class="ui-bar ui-bar-a">
+    <h3>Stanje dionica</h3>
+    <span class="time-span-buttons">
+      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1w</a>
+      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">1m</a>
+      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1y</a>
+      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">max</a>
+    </span>
+  </div>
+  <div class="ui-body ui-body-a">
+    <div class="plot-container">
+      <div id="plot" class="plot"></div>
+      <div id="plot-overlay"></div>
+    </div>
+  </div>
+</div>
+
+<div class="ui-corner-all">
+  <div class="ui-bar ui-bar-a">
     <h3>Top traderi</h3>
   </div>
   <div class="ui-body ui-body-a">
@@ -23,17 +41,6 @@
       <tbody>
       </tbody>
     </table>
-  </div>
-</div>
-
-<div class="ui-corner-all">
-  <div class="ui-bar ui-bar-a">
-    <h3>Stanje dionica</h3>
-  </div>
-  <div class="ui-body ui-body-a">
-    <div class="plot-container">
-      <div id="plot" class="plot"></div>
-    </div>
   </div>
 </div>
 
