landing message changed

--- a/server/views/landing.ejs
+++ b/server/views/landing.ejs
@@ -1,4 +1,6 @@
-fit market stock exchange.
+fit market trgovanje! trenutno alpha-only.
 <br/>
 <br/>
-<a href="/google/init/">login with google</a><br/>
+<a href="/google/init/">prijavi se s googlom</a>
+<br/>
+tvoje ime, userid niti email adresa nece biti sacuvano.
