--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -18,7 +18,11 @@
   <%- include page_personal.ejs %>
 </div>
 
-<div data-role="footer" data-position="fixed" data-theme="a">
+<div
+  data-role="footer"
+  data-position="fixed"
+  data-theme="a"
+  data-tap-toggle="false">
   <div data-role="navbar">
     <ul>
       <li><a href="#market" class="market">Tržište</a></li>
