--- a/server/static/main.css
+++ b/server/static/main.css
@@ -47,12 +47,11 @@ div#plot-overlay {
 }
 
 .time-span-buttons a:first-child {
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .time-span-buttons a {
   margin: 0px;
-  margin-left: 10px;
-  padding-top: 0px;
-  padding-bottom: 0px;
+  margin-left: 8px;
+  padding: 0px 5px;
 }
