--- a/server/views/landing.ejs
+++ b/server/views/landing.ejs
@@ -1,6 +1,10 @@
-fit market trgovanje! trenutno alpha-only.
-<br/>
-<br/>
+<h3>fit market trgovanje! trenutno beta.</h3>
+
 <a href="/google/init/">prijavi se s googlom</a>
-<br/>
-tvoje ime, userid niti email adresa nece biti sacuvano.
+<p>
+tvoje ime, google userid niti e-mail adresa neće biti sačuvana.
+</p>
+
+<p>
+<a href="https://docs.google.com/document/d/1LqvWid4Z49lMdD8WBkmFfbinDf7fKoZCZGTMIMMVt_Q/edit">help i design doc</a>
+</p>
