--- a/server/views/page_personal.ejs
+++ b/server/views/page_personal.ejs
@@ -17,6 +17,13 @@
 <div class="ui-corner-all">
   <div class="ui-bar ui-bar-a">
     <h3>Moje stanje</h3>
+    <span class="time-span-buttons">
+    <a
+      class="ui-btn ui-corner-all ui-btn-inline ui-mini"
+      href="https://docs.google.com/document/d/1LqvWid4Z49lMdD8WBkmFfbinDf7fKoZCZGTMIMMVt_Q/edit" target="_blank">
+      pomoć
+    </a>
+    </span>
   </div>
   <div class="ui-body ui-body-a">
     <table
