--- a/server/views/page_market.ejs
+++ b/server/views/page_market.ejs
@@ -9,6 +9,7 @@
     </span>
   </div>
   <div class="ui-body ui-body-a">
+    <div id="legend"></div>
     <div class="plot-container">
       <div id="plot" class="plot"></div>
       <div id="plot-overlay"></div>
