--- a/server/views/page_personal.ejs
+++ b/server/views/page_personal.ejs
@@ -40,7 +40,7 @@
       </thead>
       <tbody>
         <tr>
-          <th>Ukpuna vrijednost</th>
+          <th>Ukupna vrijednost</th>
           <td></td>
           <td><span class="value"><%= formatValue(user.total_money) %></span></td>
         </tr>
