--- a/server/views/page_personal.ejs
+++ b/server/views/page_personal.ejs
@@ -96,7 +96,7 @@
           value="1" min="1" max="100" step="1"
           data-highlight="true">
 
-        <input type="submit" value="Izvrši">
+        <input type="submit" data-theme="b" value="Izvrši">
       </div>
 
     </form>
