--- a/server/views/_head.ejs
+++ b/server/views/_head.ejs
@@ -17,7 +17,10 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script
       src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/dygraph/1.1.1/dygraph-combined.js"></script>
+
+    <script src="dygraph.min.js"></script>
+    <link rel="stylesheet" src="dygraph.min.css" />
+
     <script src="main.js"></script>
 
   </head>
