Fix https redirects

--- a/server/views/_head.ejs
+++ b/server/views/_head.ejs
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="main.css">
 
     <link rel="stylesheet"
-    href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    href="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script
-      src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+      src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
     <script src="dygraph.min.js"></script>
     <link rel="stylesheet" src="dygraph.min.css" />
