Added favicon icons

--- a/server/views/_head.ejs
+++ b/server/views/_head.ejs
@@ -23,5 +23,10 @@
 
     <script src="main.js"></script>
 
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+    <link rel="shortcut icon" href="favicon.ico" />
+
   </head>
   <body>
