add 3 months to plots

--- a/server/views/page_market.ejs
+++ b/server/views/page_market.ejs
@@ -4,6 +4,7 @@
     <span class="plot-btn time-span-buttons">
       <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1w</a>
       <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">1m</a>
+      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">3m</a>
       <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1y</a>
       <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">max</a>
     </span>
