Split pages to two html files
Because I didn't like jquery-mobile navigation

--- a/server/views/_foot.ejs
+++ b/server/views/_foot.ejs
@@ -1,2 +1,14 @@
+  <div
+    data-role="footer"
+    data-position="fixed"
+    data-theme="a"
+    data-tap-toggle="false">
+    <div data-role="navbar">
+      <ul>
+        <li><a href="/main_market" class="market">Tržište</a></li>
+        <li><a href="/main_personal" class="personal">Kupi/prodaj</a></li>
+      </ul>
+    </div>
+  </div>
   </body>
 </html>
