--- a/server/views/page_market.ejs
+++ b/server/views/page_market.ejs
@@ -1,134 +1,138 @@
-<div class="ui-corner-all">
-  <div class="ui-bar ui-bar-a">
-    <h3>Stanje dionica</h3>
-    <span class="plot-btn time-span-buttons">
-      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1w</a>
-      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">1m</a>
-      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">3m</a>
-      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1y</a>
-      <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">max</a>
-    </span>
-  </div>
-  <div class="ui-body ui-body-a">
-    <div id="legend"></div>
-    <div class="plot-container">
-      <div id="plot" class="plot"></div>
-      <div id="plot-overlay"></div>
+<%- include _head.ejs %>
+
+<div data-role="page" id="market">
+  <div class="ui-corner-all">
+    <div class="ui-bar ui-bar-a">
+      <h3>Stanje dionica</h3>
+      <span class="plot-btn time-span-buttons">
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1w</a>
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">1m</a>
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">3m</a>
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1y</a>
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">max</a>
+      </span>
+    </div>
+    <div class="ui-body ui-body-a">
+      <div id="legend"></div>
+      <div class="plot-container">
+        <div id="plot" class="plot"></div>
+        <div id="plot-overlay"></div>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="ui-corner-all">
-  <div class="ui-bar ui-bar-a">
-    <h3>Top traders</h3>
-  </div>
-  <div class="ui-body ui-body-a toplist">
-    <table
-      data-role="table"
-      class="table-stroke ui-responsive"
-      data-mode="columntoggle"
-      id="details">
-      <thead>
-        <tr>
-          <th>Trader</th>
-          <th>Vrijednost</th>
-        </tr>
-      </thead>
-      <% for (var i = 0; i < top_traders.length; ++i) { %>
-        <tr>
-          <td><%= top_traders[i].user_name %>%></td>
-          <td><%= formatValue(top_traders[i].total_money) %></td>
-        </tr>
-      <% } %>
-      <tbody>
-      </tbody>
-    </table>
-  </div>
-</div>
-
-<div class="ui-corner-all">
-  <div class="ui-bar ui-bar-a">
-    <h3>Top recent traders</h3>
-    <span class="toplist-btn time-span-buttons">
-      <% for (var periodId in opportunities) { %>
-        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">
-          <%= periodId %>
-        </a>
-      <% } %>
-    </span>
-  </div>
-
-  <% for (var periodId in opportunities) { %>
-  <div class="ui-body ui-body-a toplist toplist-div <%= periodId %>">
-    <table
-      data-role="table"
-      class="table-stroke ui-responsive recent-traders"
-      data-mode="columntoggle"
-      id="details">
-      <thead>
-        <tr>
-          <th data-priority="1">Trader</th>
-          <th
-            data-priority="3"
-            title="Vrijednost na danasnji dan - <%= periodId %>">
-            Početna vrijednost</td>
-          <th
-            data-priority="2"
-            title="Vrijednost na danasnji dan i rast od pocetka perioda"
-            >Završna vrijednost</th>
-          <th
-            data-priority="4"
-            title=
-"Vrijednost na danasnji dan koju bi
-ostvarila optimalna strategija uz poznate
-vrijednosti dionica">
-            Teoretski maksimum
-          </th>
-          <th
-            data-priority="1"
-            title="Tvoj rast / teoretski najbolji rast">
-            Efikasnost
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <% for (var i = 0; i < opportunities[periodId].length; ++i) { %>
-        <tr>
-          <td>
-            <%= opportunities[periodId][i].user_name %>
-          </td>
-          <td>
-            <%= formatValue(opportunities[periodId][i].initial_money) %>
-          </td>
-          <td>
-            <%= formatValue(opportunities[periodId][i].total_money) %>
-            <span class="change-ratio
-              <%= formatChangeClass(opportunities[periodId][i].total_money_ratio) %>
-            ">
-              <%= formatChangeRatio(opportunities[periodId][i].total_money_ratio) %>
-            </span>
-          </td>
-          <td>
-            <%= formatValue(opportunities[periodId][i].best_cost) %>
-            <span class="change-ratio
-              <%= formatChangeClass(opportunities[periodId][i].best_cost_ratio) %>
-            ">
-            <%= formatChangeRatio(opportunities[periodId][i].best_cost_ratio) %>
-            </span>
-          </td>
-          <td>
-            <span class="ratio
-                <%= formatClass(opportunities[periodId][i].efficiency) %>
-            ">
-              <%= formatRatio(opportunities[periodId][i].efficiency) %>
-            </span>
-          </td>
-        </tr>
+  <div class="ui-corner-all">
+    <div class="ui-bar ui-bar-a">
+      <h3>Top traders</h3>
+    </div>
+    <div class="ui-body ui-body-a toplist">
+      <table
+        data-role="table"
+        class="table-stroke ui-responsive"
+        data-mode="columntoggle"
+        id="details">
+        <thead>
+          <tr>
+            <th>Trader</th>
+            <th>Vrijednost</th>
+          </tr>
+        </thead>
+        <% for (var i = 0; i < top_traders.length; ++i) { %>
+          <tr>
+            <td><%= top_traders[i].user_name %>%></td>
+            <td><%= formatValue(top_traders[i].total_money) %></td>
+          </tr>
         <% } %>
-      </tbody>
-    </table>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
   </div>
-  <% } %>
 
+  <div class="ui-corner-all">
+    <div class="ui-bar ui-bar-a">
+      <h3>Top recent traders</h3>
+      <span class="toplist-btn time-span-buttons">
+        <% for (var periodId in opportunities) { %>
+          <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">
+            <%= periodId %>
+          </a>
+        <% } %>
+      </span>
+    </div>
+
+    <% for (var periodId in opportunities) { %>
+    <div class="ui-body ui-body-a toplist toplist-div <%= periodId %>">
+      <table
+        data-role="table"
+        class="table-stroke ui-responsive recent-traders"
+        data-mode="columntoggle"
+        id="details">
+        <thead>
+          <tr>
+            <th data-priority="1">Trader</th>
+            <th
+              data-priority="3"
+              title="Vrijednost na danasnji dan - <%= periodId %>">
+              Početna vrijednost</td>
+            <th
+              data-priority="2"
+              title="Vrijednost na danasnji dan i rast od pocetka perioda"
+              >Završna vrijednost</th>
+            <th
+              data-priority="4"
+              title=
+  "Vrijednost na danasnji dan koju bi
+  ostvarila optimalna strategija uz poznate
+  vrijednosti dionica">
+              Teoretski maksimum
+            </th>
+            <th
+              data-priority="1"
+              title="Tvoj rast / teoretski najbolji rast">
+              Efikasnost
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for (var i = 0; i < opportunities[periodId].length; ++i) { %>
+          <tr>
+            <td>
+              <%= opportunities[periodId][i].user_name %>
+            </td>
+            <td>
+              <%= formatValue(opportunities[periodId][i].initial_money) %>
+            </td>
+            <td>
+              <%= formatValue(opportunities[periodId][i].total_money) %>
+              <span class="change-ratio
+                <%= formatChangeClass(opportunities[periodId][i].total_money_ratio) %>
+              ">
+                <%= formatChangeRatio(opportunities[periodId][i].total_money_ratio) %>
+              </span>
+            </td>
+            <td>
+              <%= formatValue(opportunities[periodId][i].best_cost) %>
+              <span class="change-ratio
+                <%= formatChangeClass(opportunities[periodId][i].best_cost_ratio) %>
+              ">
+              <%= formatChangeRatio(opportunities[periodId][i].best_cost_ratio) %>
+              </span>
+            </td>
+            <td>
+              <span class="ratio
+                  <%= formatClass(opportunities[periodId][i].efficiency) %>
+              ">
+                <%= formatRatio(opportunities[periodId][i].efficiency) %>
+              </span>
+            </td>
+          </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </div>
+    <% } %>
+  </div>
 </div>
 
+<%- include _foot.ejs %>
