--- a/server/views/page_market.ejs
+++ b/server/views/page_market.ejs
@@ -24,6 +24,13 @@
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
       <h3>Top traders</h3>
+      <span class="time-span-buttons">
+      <a
+        class="ui-btn ui-corner-all ui-btn-inline ui-mini"
+        href="/main_total_money">
+        plot it!
+      </a>
+      </span>
     </div>
     <div class="ui-body ui-body-a toplist">
       <table
