--- a/server/views/page_total_money.ejs
+++ b/server/views/page_total_money.ejs
@@ -1,17 +1,6 @@
 <%- include _head.ejs %>
-<%- include functions.ejs %> 
 
-<script>
-  var js_payload = <%- js_payload %>;
-  for (var key in {error:0, info:0}) {
-    for (var i = 0; i < js_payload[key].length; ++i) {
-      console.log(key + ":", js_payload[key][i]);
-    }
-  }
-</script>
-
-<div data-role="page" id="total-money">
-
+<div data-role="page" id="total_money">
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
       <h3>Stanje top-liste</h3>
@@ -30,7 +19,6 @@
       </div>
     </div>
   </div>
-
 </div>
 
 <%- include _foot.ejs %>
