show-hide sections

--- a/server/static/common.css
+++ b/server/static/common.css
@@ -128,3 +128,7 @@ div .fastmarket-container .invalid.narrative {
 .fastmarket-loading {
   display: none;
 }
+
+.ui-corner-all h3 {
+  cursor: default;
+}
