--- a/server/views/page_market.ejs
+++ b/server/views/page_market.ejs
@@ -5,7 +5,7 @@
   <!-- graph -->
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
-      <h3>Stanje dionica</h3>
+      <h3 data-visible="yes">Stanje dionica</h3>
       <span class="plot-btn time-span-buttons">
         <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1w</a>
         <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">1m</a>
@@ -26,7 +26,7 @@
   <!-- top recent traders -->
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
-      <h3>Top recent traders</h3>
+      <h3 data-visible="yes">Top recent traders</h3>
       <span class="toplist-btn time-span-buttons">
         <% for (var periodId in opportunities) { %>
           <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">
@@ -112,7 +112,7 @@
   <!-- top traders -->
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
-      <h3>Top traders</h3>
+      <h3 data-visible="yes">Top traders</h3>
       <span class="time-span-buttons">
       <a
         class="ui-btn ui-corner-all ui-btn-inline ui-mini"
@@ -148,7 +148,7 @@
   <!-- fast market -->
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
-      <h3>Brzo trgovanje<span class="fastmarket-loading">...</span></h3>
+      <h3 data-visible="yes">Brzo trgovanje<span class="fastmarket-loading">...</span></h3>
     </div>
     <div class="ui-body ui-body-a">
       <div class="fastmarket-container">
