--- a/server/views/page_market.ejs
+++ b/server/views/page_market.ejs
@@ -5,15 +5,24 @@
   <!-- graph -->
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
-      <h3 data-visible="yes">Stanje dionica</h3>
-      <span class="plot-btn time-span-buttons">
-        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1w</a>
-        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">1m</a>
-        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini initial">3m</a>
-        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">1y</a>
-        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">max</a>
+      <h3
+        data-visible="<%= ui_defaults.section_plot_visible %>"
+        data-name="section_plot_visible"
+      >
+        Stanje dionica
+      </h3>
+      <span
+        class="plot-btn time-span-buttons"
+        data-initial="<%= ui_defaults.initial_plot_btn %>"
+      >
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini d1w">1w</a>
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini d1m">1m</a>
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini d3m">3m</a>
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini d1y">1y</a>
+        <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini dmax">max</a>
       </span>
     </div>
+    <div class="section-wrapper">
     <div class="ui-body ui-body-a">
       <div id="legend"></div>
       <div class="plot-container">
@@ -21,21 +30,30 @@
         <div id="plot-overlay"></div>
       </div>
     </div>
+    </div>
   </div>
 
   <!-- top recent traders -->
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
-      <h3 data-visible="yes">Top recent traders</h3>
-      <span class="toplist-btn time-span-buttons">
+      <h3
+        data-visible="<%= ui_defaults.section_toptraders_visible %>"
+        data-name="section_toptraders_visible"
+      >
+        Top recent traders
+      </h3>
+      <span class="toplist-btn time-span-buttons"
+        data-initial="<%= ui_defaults.initial_toplist_btn %>"
+      >
         <% for (var periodId in opportunities) { %>
-          <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini">
+          <a href="#" class="ui-btn ui-corner-all ui-btn-inline ui-mini d<%= periodId %>">
             <%= periodId %>
           </a>
         <% } %>
       </span>
     </div>
 
+    <div class="section-wrapper">
     <% for (var periodId in opportunities) { %>
     <div class="ui-body ui-body-a toplist toplist-div <%= periodId %>">
       <table
@@ -107,12 +125,18 @@
       </table>
     </div>
     <% } %>
+    </div>
   </div>
 
   <!-- top traders -->
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
-      <h3 data-visible="yes">Top traders</h3>
+      <h3
+        data-visible="<%= ui_defaults.section_topabstraders_visible %>"
+        data-name="section_topabstraders_visible"
+      >
+        Top traders
+      </h3>
       <span class="time-span-buttons">
       <a
         class="ui-btn ui-corner-all ui-btn-inline ui-mini"
@@ -121,6 +145,7 @@
       </a>
       </span>
     </div>
+    <div class="section-wrapper">
     <div class="ui-body ui-body-a toplist">
       <table
         data-role="table"
@@ -143,13 +168,20 @@
         </tbody>
       </table>
     </div>
+    </div>
   </div>
 
   <!-- fast market -->
   <div class="ui-corner-all">
     <div class="ui-bar ui-bar-a">
-      <h3 data-visible="yes">Brzo trgovanje<span class="fastmarket-loading">...</span></h3>
+      <h3
+        data-visible="<%= ui_defaults.section_fastmarket_visible %>"
+        data-name="section_fastmarket_visible"
+      >
+        Brzo trgovanje<span class="fastmarket-loading">...</span>
+      </h3>
     </div>
+    <div class="section-wrapper">
     <div class="ui-body ui-body-a">
       <div class="fastmarket-container">
         <div class="narrative">
@@ -196,6 +228,7 @@
         <% } %>
         <% } %>
       </div>
+    </div>
     </div>
   </div>
 
