--- a/server/views/page_personal.ejs
+++ b/server/views/page_personal.ejs
@@ -73,6 +73,7 @@
     <div class="ui-bar">
       <div data-role="controlgroup" data-type="horizontal" class="my-center">
         <a href="#" class="ui-btn show-sth show-buy">Kupi</a>
+        <a href="/main" class="ui-btn show-sth">Povratak</a>
         <a href="#" class="ui-btn show-sth show-sell">Prodaj</a>
       </div>
     </div>
