remove unneeded token brzo

--- a/server/views/page_market.ejs
+++ b/server/views/page_market.ejs
@@ -178,7 +178,7 @@
         data-visible="<%= ui_defaults.section_fastmarket_visible %>"
         data-name="section_fastmarket_visible"
       >
-        Brzo trgovanje<span class="fastmarket-loading">...</span>
+        Trgovanje<span class="fastmarket-loading">...</span>
       </h3>
     </div>
     <div class="section-wrapper">
